--- a/administrator/language/en-GB/en-GB.com_j2store.ini
+++ b/administrator/language/en-GB/en-GB.com_j2store.ini
@@ -1923,7 +1923,7 @@ J2STORE_CONF_J2STORE_AUTO_APPLY_SHIPPING="Auto apply if only one shipping method
 J2STORE_CONF_J2STORE_AUTO_APPLY_SHIPPING_DESC="Useful when you have only one shipping method and it needs to be automatically selected when customer checksout."
 
 COM_J2STORE_TITLE_SHIPPINGTROUBLES="Shipping troubleshooter"
-J2STORE_SHIPPING_TROUBLESHOOT_NOTE_MESSAGE="Please enable atleast one Shipping plugin. Goto <a href=\"%s\">Setup > Shipping </a><br/> For Standard Shipping plugin, please make sure that rates are configured.Refer our <a href=\"%s\">user guide > standard shipping section </a> for more information"
+J2STORE_SHIPPING_TROUBLESHOOT_NOTE_MESSAGE="Please enable atleast one Shipping plugin. Goto <a href='%s'>Setup > Shipping </a><br/> For Standard Shipping plugin, please make sure that rates are configured.Refer our <a href='%s'>user guide > standard shipping section </a> for more information"
 J2STORE_PRODUCT_SHIPPING_ENABLED="Shipping Enabled"
 J2STORE_PRODUCT_SHIPPING_DIMENSION="Dimensions"
 J2STORE_PRODUCT_SHIPPING_WEIGHT="Weights"
@@ -2111,3 +2111,4 @@ PLG_USER_J2CUSTOM_PROFILE_J2STORE_FIELDS="Address"
 J2STORE_J2USERREGISTER_FILEDS_HTML="Fields Html"
 J2STORE_OPTION_VALUE_USED_IN_SOME_PRODUCT="The option value(s) you are trying to delete are still associated with some of the products. They should be removed from those products before you could delete here."
 J2STORE_J2USERREGISTER_SHOW_MYPROFILE="J2Store’s MyProfile view"
+J2STORE_INVENTRY_FILTER_STOCK="Inventry Status"
